# universal-ingestion-framework

./: .coverage  .geminiignore  .gitignore  .qwenignore  AGENTS.md  PRD.md  README.es.md  README.md  clean.py  config.example.yaml  engine.py  link_documentation.md  mem_profile.snap  prd.md  profile_cpu.py  profile_latency.py  profile_memory.py  profile_output.prof  pyproject.toml  ramas_git.md  test_chaos.py
.gemini/: AGENTS.md  GEMINI.md  README.md  settings.json  settings_doc.md
.gemini/hooks/: block-secrets.js  inject-context.js  log-operations.js  session-start.js  validate-python.js  validate-response.js
.github/workflows/: ci.yml
.opencode/: opencode.jsonc
.opencode/agents/: uif-architect.md  uif-docs.md  uif-explorer.md  uif-refactorer.md  uif-reviewer.md  uif-tester.md
.opencode/commands/: commit.md  learn.md  lint.md  run.md  test.md
.opencode/themes/: uif-dark.json
.qwen/: AGENTS.md  settings.json  settings_doc.md
argelia_scraper/: cli.py  config.py  db_manager.py  db_pool.py  engine.py
argelia_scraper/extractors/: asset_extractor.py  metadata_extractor.py  text_extractor.py
argelia_scraper/utils/: html_cleaner.py  text_utils.py
data/apointflammebleue-dz_com/: migration_audit.jsonl  state_apointflammebleue-dz_com.db
data/arxiv_org/: migration_audit.jsonl  state_arxiv_org.db  state_arxiv_org.db-wal
data/geminicli_com/: migration_audit.jsonl  state_geminicli_com.db
docs/: AGENTS_en.md  AGENTS_es.md  CHANGELOG.md  MIGRATION_GUIDE.md  MIGRATION_GUIDE_en.md  MIGRATION_TO_CURL_CFFI.md  NETWORK_RESILIENCE_STRATEGY.md  prd.md  prd_en.md
scripts/: benchmark.py
shell/: README.md  scrape.fish
tests/: conftest.py  test_assets.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_db_batch.py  test_db_manager.py  test_db_pool.py  test_e2e.py  test_e2e_browser.py  test_engine_basic.py  test_engine_core.py  test_engine_extra.py  test_engine_orchestration.py  test_engine_process.py  test_engine_shutdown.py  test_engine_summary.py  test_extractors.py  test_html_cleaner.py  test_logger.py  test_metadata_extraction_expanded.py  test_models.py  test_navigation.py  test_navigation_extract.py  test_reporter.py  test_text_extractor_fallback.py  test_throttling.py  test_tui_engine_integration.py  test_tui_messages.py  test_url_utils.py
uif_scraper/: cli.py  config.py  db_manager.py  db_pool.py  engine.py  engine_v2.py  logger.py  models.py  navigation.py  reporter.py
uif_scraper/core/: __init__.py  constants.py  engine_core.py  stats_tracker.py  types.py
uif_scraper/tui/: __init__.py  (+3 more)
(+215 files in other folders)
