[project]
name = "uif-scraper"
version = "3.0.0"
description = "Universal Ingestion Framework"
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[project.scripts]
uif-scraper = "uif_scraper.cli:main"


[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
    "types-aiofiles>=25.1.0.20251011",
    "types-pyyaml>=6.0.12.20250915",
]
